--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <img src="./src/image0.jpeg">
                 <p class="caption">❤️</p>
             </div>
-            <h1>for my cutie patutie</h1>
+            <h1>for my cutie patootie</h1>
         </div>
     </div>
     <script>
