--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     
         function handleYesClick() {
             imageDisplay.src = './images/imageSuccess.gif';
-            valentineQuestion.textContent = "Yayyy!! :3";
+            valentineQuestion.textContent = "Thats like my babbbyyyy!! >3";
             responseButtons.style.display = 'none';
             confetti();
 
